--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -245,7 +245,8 @@ equestrian:
       - http://localhost:8080
   # JWT密钥
   jwt:
-    secret: E66559580A1ADF48CDD928516062F12E
+    secret: WF6ET9NQWS1OD8LOFHLXYCJH8F70VOZR
+    expiration: 3600
   # XSS 过滤配置
   xss:
     # 过滤开关
